--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <p class="tagline">Premium Cinema Experience • Exclusive Collection</p>
             <div class="header-stats">
                 <div class="stat-item">
-                    <span class="stat-number">4</span>
+                    <span class="stat-number">7</span>
                     <span class="stat-label">Films</span>
                 </div>
                 <div class="stat-item">
@@ -54,7 +54,7 @@
                 onclick="openFilm('https://kinogo-films.fm/417-oppengejmer.html')"
             >
                 <div class="card-glow"></div>
-                <div class="quality-badge">  PREMIUM 4K</div>
+                <div class="quality-badge">PREMIUM 4K</div>
                 <div class="film-poster oppenheimer">
                     <div class="poster-overlay">
                         <div class="play-icon">▶</div>
@@ -72,6 +72,9 @@
                         <span class="stars">★★★★★</span>
                         <span class="score">8.6</span>
                     </div>
+                    <button class="watch-btn">
+                        Watch Now <i class="btn-icon fas fa-play"></i>
+                    </button>
                 </div>
             </div>
 
@@ -99,6 +102,9 @@
                         <span class="stars">★★★★☆</span>
                         <span class="score">7.2</span>
                     </div>
+                    <button class="watch-btn">
+                        Watch Now <i class="btn-icon fas fa-play"></i>
+                    </button>
                 </div>
             </div>
 
@@ -126,6 +132,9 @@
                         <span class="stars">★★★☆☆</span>
                         <span class="score">6.4</span>
                     </div>
+                    <button class="watch-btn">
+                        Watch Now <i class="btn-icon fas fa-play"></i>
+                    </button>
                 </div>
             </div>
 
@@ -153,6 +162,101 @@
                         <span class="stars">★★★★☆</span>
                         <span class="score">7.8</span>
                     </div>
+                    <button class="watch-btn">
+                        Watch Now <i class="btn-icon fas fa-play"></i>
+                    </button>
+                </div>
+            </div>
+
+            <!-- 5. Планета обезьян: Новое царство -->
+            <div 
+                class="film-card premium" 
+                onclick="openFilm('https://kinogo-films.fm/4089-planeta-obezjan-novoe-carstvo.html')"
+            >
+                <div class="card-glow"></div>
+                <div class="quality-badge">PREMIUM 4K</div>
+                <div class="film-poster apes">
+                    <div class="poster-overlay">
+                        <div class="play-icon">▶</div>
+                    </div>
+                    <div class="poster-bg">🐵👑</div>
+                </div>
+                <div class="film-info">
+                    <h3>Планета обезьян: Новое царство</h3>
+                    <p class="genre">Action • Sci-Fi • Adventure</p>
+                    <p class="description">
+                        Nach dem epischen Ende der Mensch-Affen-Kriege erwartet dich das nächste Kapitel: 
+                        Eine neue Ära, in der der schlaue Affen-Anführer Ceasar eine unwahrscheinliche Allianz 
+                        eingeht, um sein Volk zu retten.
+                    </p>
+                    <div class="rating">
+                        <span class="stars">★★★★☆</span>
+                        <span class="score">7.9</span>
+                    </div>
+                    <button class="watch-btn">
+                        Watch Now <i class="btn-icon fas fa-play"></i>
+                    </button>
+                </div>
+            </div>
+
+            <!-- 6. Быстрее пули -->
+            <div 
+                class="film-card premium" 
+                onclick="openFilm('https://kinogo-films.fm/718-bystree-puli.html')"
+            >
+                <div class="card-glow"></div>
+                <div class="quality-badge">PREMIUM 4K</div>
+                <div class="film-poster bullet">
+                    <div class="poster-overlay">
+                        <div class="play-icon">▶</div>
+                    </div>
+                    <div class="poster-bg">🚄💥</div>
+                </div>
+                <div class="film-info">
+                    <h3>Быстрее пули</h3>
+                    <p class="genre">Action • Comedy • Thriller</p>
+                    <p class="description">
+                        Ein Elite-Killer findet sich in einem Hochgeschwindigkeitszug wieder, der 
+                        voller Auftragsmörder ist. Ein adrenalingeladenes Katz-und-Maus-Spiel mit 
+                        jeder Menge schwarzem Humor.
+                    </p>
+                    <div class="rating">
+                        <span class="stars">★★★★☆</span>
+                        <span class="score">7.4</span>
+                    </div>
+                    <button class="watch-btn">
+                        Watch Now <i class="btn-icon fas fa-play"></i>
+                    </button>
+                </div>
+            </div>
+
+            <!-- 7. Война миров Z (2013) -->
+            <div 
+                class="film-card premium" 
+                onclick="openFilm('https://kinogotv.biz/1575-vojna-mirov-z-2013.html')"
+            >
+                <div class="card-glow"></div>
+                <div class="quality-badge">PREMIUM 4K</div>
+                <div class="film-poster worldwarz">
+                    <div class="poster-overlay">
+                        <div class="play-icon">▶</div>
+                    </div>
+                    <div class="poster-bg">🧟‍♂️🌍</div>
+                </div>
+                <div class="film-info">
+                    <h3>Война миров Z (2013)</h3>
+                    <p class="genre">Action • Horror • Sci-Fi</p>
+                    <p class="description">
+                        Als eine weltweite Zombie-Pandemie ausbricht, reist ein UN-Mitarbeiter um 
+                        die Welt, um das Rätsel hinter der Seuche zu lösen und das Überleben der Menschheit zu sichern.
+                    </p>
+                    <div class="rating">
+                        <span class="stars">★★★★☆</span>
+                        <span class="score">7.0</span>
+                    </div>
+                    <button class="watch-btn">
+                        Watch Now <i class="btn-icon fas fa-play"></i>
+                    </button>
                 </div>
             </div>
         </div>
